--- a/index.html
+++ b/index.html
@@ -11,48 +11,61 @@
       margin: 0;
       padding: 0;
     }
+
     .container {
-      max-width: 500px;
+      max-width: 600px;
       margin: 30px auto;
       background: #fff;
-      padding: 30px;
+      padding: 30px 40px 40px 40px;
       border-radius: 10px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
     }
+
     .logo {
       display: block;
-      margin: 0 auto 25px;
+      margin: 0 auto 30px;
+      width: 400px; /* Daha büyük logo */
       max-width: 100%;
-      width: 400px; /* LOGO BURASI BÜYÜK */
+      height: auto;
     }
+
     h2 {
       text-align: center;
       color: #2c3e50;
+      margin-bottom: 30px;
     }
+
     label {
       display: block;
       margin-top: 15px;
       font-weight: bold;
+      color: #34495e;
     }
+
     input, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-top: 5px;
       border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 14px;
+      border-radius: 6px;
+      font-size: 15px;
+      box-sizing: border-box;
+      resize: vertical;
     }
+
     button {
-      margin-top: 25px;
-      padding: 12px;
+      margin-top: 30px;
+      padding: 14px;
       width: 100%;
       background-color: #2c3e50;
       color: white;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 6px;
+      font-size: 18px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
       background-color: #1a252f;
     }
@@ -84,29 +97,28 @@
   </div>
 
   <script>
-    document.getElementById("arizaForm").addEventListener("submit", function(e) {
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbx1JrdTr18x8qaUtCJGYdVpCNzlbfVHUzg3nlPYn44jT5N9T-VjYNKeAYXTGuMoW64/exec';
+
+    document.getElementById('arizaForm').addEventListener('submit', e => {
       e.preventDefault();
-
-      const formData = new FormData(this);
+      const formData = new FormData(e.target);
       const data = {};
-      formData.forEach((value, key) => (data[key] = value));
+      formData.forEach((value, key) => data[key] = value);
 
-      fetch("https://script.google.com/macros/s/AKfycbzjApo8OndGN4CQIM1IvYXtpbgjQkZj7pvyYc3OdETrDoSSWqoUkN_9tY6p42h5JWIE/exec", {
-        method: "POST",
+      fetch(scriptURL, {
+        method: 'POST',
         body: JSON.stringify(data),
-        headers: { "Content-Type": "application/json" },
+        headers: { 'Content-Type': 'application/json' }
       })
-        .then((res) => {
-          if (res.ok) {
-            alert("✅ Arıza başarıyla gönderildi!");
-            document.getElementById("arizaForm").reset();
+        .then(response => {
+          if (response.ok) {
+            alert('✅ Arıza başarıyla gönderildi!');
+            e.target.reset();
           } else {
-            alert("❌ Form gönderilemedi. Lütfen tekrar deneyin.");
+            alert('❌ Form gönderilemedi. Lütfen tekrar deneyin.');
           }
         })
-        .catch((err) => {
-          alert("⚠️ Hata oluştu: " + err.message);
-        });
+        .catch(error => alert('⚠️ Hata oluştu: ' + error.message));
     });
   </script>
 </body>
