--- a/index.html
+++ b/index.html
@@ -1,69 +1,63 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
   <title>Tevhid Asansör Arıza Formu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background-color: #f0f0f0;
       margin: 0;
       padding: 0;
     }
 
     .container {
-      max-width: 600px;
-      margin: 30px auto;
-      background: #fff;
-      padding: 30px 40px 40px 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+      max-width: 500px;
+      margin: 40px auto;
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
 
     .logo {
       display: block;
-      margin: 0 auto 30px;
-      width: 400px; /* Daha büyük logo */
+      margin: 0 auto 25px;
       max-width: 100%;
-      height: auto;
+      width: 350px;
     }
 
     h2 {
       text-align: center;
       color: #2c3e50;
-      margin-bottom: 30px;
     }
 
     label {
-      display: block;
       margin-top: 15px;
+      display: block;
       font-weight: bold;
-      color: #34495e;
     }
 
     input, textarea {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       margin-top: 5px;
       border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 15px;
-      box-sizing: border-box;
-      resize: vertical;
+      border-radius: 5px;
+      font-size: 14px;
     }
 
     button {
-      margin-top: 30px;
-      padding: 14px;
+      margin-top: 25px;
+      padding: 12px;
       width: 100%;
       background-color: #2c3e50;
       color: white;
       border: none;
-      border-radius: 6px;
-      font-size: 18px;
+      border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
 
     button:hover {
@@ -73,18 +67,18 @@
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="https://i.hizliresim.com/eefw63i.png" alt="Tevhid Asansör Logo" />
+    <img class="logo" src="https://i.hizliresim.com/eefw63i.png" alt="Tevhid Asansör Logo">
     <h2>Arıza Bildirim Formu</h2>
 
     <form id="arizaForm">
       <label>Ad Soyad:</label>
-      <input type="text" name="ad" required />
+      <input type="text" name="ad" required>
 
       <label>Telefon:</label>
-      <input type="tel" name="telefon" required />
+      <input type="tel" name="telefon" required>
 
       <label>Bina Adı:</label>
-      <input type="text" name="bina_adi" />
+      <input type="text" name="bina_adi">
 
       <label>Adres:</label>
       <textarea name="bina_adresi" rows="3"></textarea>
@@ -97,28 +91,30 @@
   </div>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbx1JrdTr18x8qaUtCJGYdVpCNzlbfVHUzg3nlPYn44jT5N9T-VjYNKeAYXTGuMoW64/exec';
-
-    document.getElementById('arizaForm').addEventListener('submit', e => {
+    document.getElementById("arizaForm").addEventListener("submit", function(e) {
       e.preventDefault();
-      const formData = new FormData(e.target);
+      const formData = new FormData(this);
       const data = {};
       formData.forEach((value, key) => data[key] = value);
 
-      fetch(scriptURL, {
-        method: 'POST',
+      fetch("https://script.google.com/macros/s/AKfycbwlymyNq5wP0-Xm_xEHJA1eE3JNMoaJoVuuuIC83JGPlPitm15M0DBAbEWbZgdS0oQH/exec", {
+        method: "POST",
         body: JSON.stringify(data),
-        headers: { 'Content-Type': 'application/json' }
+        headers: {
+          "Content-Type": "application/json"
+        }
       })
-        .then(response => {
-          if (response.ok) {
-            alert('✅ Arıza başarıyla gönderildi!');
-            e.target.reset();
-          } else {
-            alert('❌ Form gönderilemedi. Lütfen tekrar deneyin.');
-          }
-        })
-        .catch(error => alert('⚠️ Hata oluştu: ' + error.message));
+      .then(res => {
+        if (res.ok) {
+          alert("✅ Arıza başarıyla gönderildi!");
+          document.getElementById("arizaForm").reset();
+        } else {
+          alert("❌ Form gönderilemedi. Lütfen tekrar deneyin.");
+        }
+      })
+      .catch(err => {
+        alert("⚠️ Hata oluştu: " + err.message);
+      });
     });
   </script>
 </body>
